_css/app.css
html {
  scroll-behavior: smooth;
}

#main-menu {
  background-color: #fff !important;
  padding: 0;
}
#main-menu .nav-item {
  padding: 16px;
  border-bottom: 2px solid transparent;
}
#main-menu .nav-item:hover {
  background-color: #eee;
}
#main-menu .nav-item.donate:hover {
  background-color: #fff;
  border-bottom: 0;
}
#main-menu .nav-item.active {
  border-bottom-color: #ca3c32;
}
.navbar-light .navbar-nav .nav-link {
  color: inherit;
}

.navbar-light .navbar-nav .active>.nav-link,
.navbar-light .nav-item:hover .nav-link {
  color: #ca3c32;
}
.navbar-brand {
  min-width: 80px;
  margin-left: 0.25rem;
  margin-right: 0;
  padding-bottom: 1rem;
}
.navbar-brand img {
  height: 50px;
}
.navbar-right {
  margin-right: 0.25rem;
}

#menu li {
    list-style-type: none;
    padding: 4px 4px;
    text-decoration: none;
    background-color: none;
    display: block;
    text-align: left;
}

#menu a{
  color:white;
  display: block;
}

#menu ul{
    width: 100%;
    background: #cacaca;
    margin: 0;
    padding: 0;
}

.main-heading {
  /* font-family: "Futura LT Medium"; */
  font-family: "Roboto", sans-serif;
  font-weight: 100;
  font-size: 46px;
}
.secondary-heading {
  /* font-family: "Futura LT Medium"; */
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-size: 18px;
  margin-bottom: 50px;
}

.extra-link {
  font-size: 12px;
  text-decoration: none !important;
}

.language-features {
  text-align: center;
  color: #4D64AE;
}
.language-features hr {
  background-color: #4D64AE;
}

.section-heading .lead {
  /* font-family: "Futura LT Medium"; */
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  font-size: 28px;
}
.section-heading h2 {
  margin-bottom: 10px;
}
.section-heading h5 {
  /* font-family: "Futura LT Medium"; */
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-size: 16px;
}

.feature {
  /* text-align: center; */
}
.feature h4 {
  text-align: left;
  /* border-bottom: 1px solid #4D64AE; */
  padding-bottom: 5px;
  /* font-family: "Futura LT Medium"; */
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  color: #4D64AE;
  font-size: 18px;
}
.feature p {
  /* font-family: "Futura LT Medium"; */
  font-family: "Roboto", sans-serif;
  font-size: 16px;
  text-align: left;
  text-align: justify;
}

.ecosystem {
  text-align: center;
  color: #CA3C32;
}

.alt-color {
  background-color: #F2F2F2;
}
#ecosystem-tab {
  border: 0;
  width: 100%;
}
#ecosystem-tab .nav-item a {
  padding: 18px 0;
  border: 0;
  /* font-family: "Futura LT Medium"; */
  font-family: "Roboto", sans-serif;
  font-size: 14px;
}
#ecosystem-tab .nav-item a.active {
  border-top: 4px solid #CA3C32;
  color: #CA3C32;
}
#ecosystem-tab .nav-item a {
  color: #545454;
}
#ecosystem-tab .nav-item a:hover {
  color: #CA3C32;
}
#ecosystem-tab .nav-item a:focus-visible {
  color: #CA3C32;
  outline: 2px solid #CA3C32;
  outline-offset: -2px;
}
#ecosystem-tab-content div.tab-pane {
  background-color: #fff;
  /* border-left: 1px solid #ddd; */
  margin-left: -15px;
  margin-right: -15px;
  min-height: 300px;
  margin-bottom: 20px;
  /* padding: 20px; */
}
.ecosystem hr {
  background-color: #CA3C32;
}

.ide, .blog {
  background-color: #F2F2F2;
  border-left: 20px solid #fff;
  border-right: 20px solid #fff;
  padding: 20px;
  text-align: center;
  border-bottom: 20px solid #fff;
}

.feature {
  padding-bottom: 20px;
}
.feature .outer-link {
  /* font-family: "Futura LT Medium"; */
  font-family: "Roboto", sans-serif;
  text-align: center;
}
.ide-feature {
  text-align: center;
}

.editor-icon {
  text-align: center;
}
.editor-icon img {
  padding: 10px 0;
  height: 80px;
}

.packages {
  /* font-family: "Futura LT Medium"; */
  font-family: "Roboto", sans-serif;
}
.packages.pluto {
  background-color: #faefec;
  border-radius: 0.8em;
  box-shadow: 0 0 28px #00000008;
}
.packages.pluto img {
  border-radius: 0.3em;
  border: 3px solid hsl(221.21deg 17.28% 78.6%);
}

.packages.pluto p,
.packages.pluto h2 {
  background-color: #faefec;
  outline: 10px solid #faefec;
}

.rss-icon {
  color: #e2802f;
  float: right;
}

.blog {
  /* font-family: "Futura LT Medium"; */
  font-family: "Roboto", sans-serif;
  text-align: left;
}
.blog h3 {
  /* font-family: "Futura LT Medium"; */
  font-family: "Roboto", sans-serif;
  font-size: 18px;
  margin-bottom: 0;
}
.blog h3 a {
  color: #4D64AE;
  display: block;
  min-height: 42px;
}
.blog .article-date {
  font-size: 12px;
  color: #545454;
}
.blog p {
  border-top: 1px solid #ccc;
  margin-top: 10px;
  padding-top: 10px;
  margin-bottom: 0px;
  font-size: 14px;
}

.social-network {
  /* font-family: "Futura LT Medium"; */
  font-family: "Roboto", sans-serif;
  font-size: 14px;
  background-position: top left;
  background-repeat: no-repeat;
  padding-left: 60px;
  background-size: 50px;
  border-bottom: 1px solid #ccc;
}
.social-network h4 {
  /* font-family: "Futura LT Medium"; */
  font-family: "Roboto", sans-serif;
  font-size: 16px;
}
.social-network.discourse {
  background-image: url("../img/discourse.png");
  margin-top: 14px;
}
.social-network.gitter {
  background-image: url("../img/gitter.png");
  margin-top: 14px;
}
.social-network.youtube {
  background-image: url("../img/youtube.png");
  margin-top: 14px;
  border-bottom: 0;
}
.social-network.twitter {
  background-image: url("../img/twitter.png");
  margin-top: 14px;
  border-bottom: 0;
}
.social-network.github {
  background-image: url("../img/github.png");
  margin-top: 14px;
}
.social-network.facebook {
  background-image: url("../img/facebook.png");
  margin-top: 14px;
  border-bottom: 0;
}

.video {
  margin-left: auto;
  margin-right: auto;
  padding: 20px;
}

.juliacon-section {
  scroll-margin-top: 80px;
  position: relative;
  padding-top: 2rem;
  padding-bottom: 2rem;
  overflow-y: hidden;
  overflow-x: hidden;
}
/* ... */

